WIP contratto sponsor

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -268,6 +268,7 @@ label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
 label.allega=Allega
+label.allega_contratti_sponsor=Allega Contratti Sponsor
 label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
@@ -375,6 +376,8 @@ label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
 label.contrassegna_come_letta=Contrassegna come letta
 label.contratto=Contratto
+label.contratto_da_inserire=CONTRATTO DA INSERIRE
+label.contratto_sponsor=Contratto dello Sponsor
 label.contributo_annuale=Contributo Annuale
 label.contributo_annuale_provider=Contributi Annuali del Provider
 label.coordinatore_comitato=Coordinatore
@@ -584,6 +587,7 @@ label.info_sponsor_evento=Il Provider dichiara che i contratti sono disponibili 
 label.info_tooltip_numero_partecipanti_fsc=Vincolo di 1 tutor per massimo 5 partecpanti. \n (1 tutor, massimo 5 partecipanti) \n (2 tutor, massimo 10 partecipanti)
 label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
 label.informazioni_sede=Informazioni relative alla Sede dell'Evento
+label.inserimento_contratto_sponsor=Inserimento dell'allegato Contratto per lo Sponsor:\u0020
 label.inserimento_file_note=Inserimento Allegato (opzionale)
 label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
 label.inserimento_numero_verbale=Inserire il numero del Verbale della Seduta
@@ -598,6 +602,7 @@ label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accred
 label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
 label.inserisci=Inserisci
 label.inserisci_attivita=Inserisci Attività
+label.inserisci_contratto=Inserisci Contratto
 label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_nuova_seduta=Nuova Seduta
 label.inserisci_partner=Inserisci Partner
@@ -667,6 +672,7 @@ label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
 label.lista_relazioni_annuali=Elenco Relazioni Annuali
 label.lista_sedute=Gestione Sedute
+label.lista_sponsor_provider_evento=Lista Sponsor del Provider {0} per l''Evento Id: {1}
 label.lista_valutatori=Lista dei Valutatori
 label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
 label.locked=Bloccato
@@ -725,6 +731,7 @@ label.nessun_pagamento_trovato=Nessun Pagamento Trovato
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
 label.nessun_responsabile_registrato=Nessun Responsabile Registrato
+label.nessun_sponsor_list=Non ci sono sponsor!
 label.nessuna_attivita_registrata=Nessuna Attività Registrata
 label.nessuna_comunicazione_ricevuta_ancora=Non è stata ancora ricevuta nessuna Comunicazione
 label.nessuna_comunicazione_tipologia=Non ci sono Comunicazioni {0}!
@@ -982,6 +989,7 @@ label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.sostituto=Sostituto
+label.sponsorFile=Contratto Sponsor
 label.sponsors=Sponsors
 label.sposta=Sposta
 label.stato=Stato
