--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -768,6 +768,7 @@ label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
 label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
+label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
