Gestione Anagrafe Regionale Crediti

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -284,6 +284,9 @@ label.altri_n_destinatari=... altri {0} destinatari
 label.altro_personale=Altro personale
 label.ambito=Ambito:
 label.ambito_list=Ambito
+label.anagrafe_regionale_crediti=Anagrafe Regionale Crediti
+label.anagrafe_regionale_crediti_anno=Anagrafe Regionale Crediti - Anno {0}
+label.anagrafe_regionale_crediti_info={0} {1} {2} - Acquisito {3} Crediti nell''anno {4}
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_evento=Anagrafiche Relative agli Eventi
@@ -387,6 +390,7 @@ label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
 label.crediti=Crediti ECM
+label.crediti_acquisiti=Crediti Acquisiti
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_attribuiti_utente=Crediti ECM attribuiti dal Provider
 label.crediti_formativi_proposti_dal_sistema=Crediti ECM proposti dal sistema
@@ -965,6 +969,7 @@ label.seleziona=Seleziona...
 label.seleziona_altro_ODG=Seleziona l'Ordine Del Giorno nel quale spostare la domanda di Accreditamento selezionata
 label.seleziona_anagrafica=Seleziona anagrafica esistente
 label.seleziona_anno=Seleziona l'anno del piano formativo
+label.seleziona_anno_riferimento=Selezionare l'anno di riferimento
 label.seleziona_button=Seleziona
 label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
@@ -1018,6 +1023,7 @@ label.tipologia_sede=Tipologia Sede
 label.titolare=Titolare
 label.titolo=Titolo
 label.titolo_convegno=Titolo del Convegno
+label.titolo_evento=Titolo Evento
 label.titolo_programma_formativo=Titolo del programma formativo
 label.to=A:
 label.to_provider={0} ({1})
