finita gestione di inserimento dei contratti degli sponsor

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -693,6 +693,7 @@ label.mittente=Mittente
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
 label.modifica_comitato=Inserimento/rimozione di componenti
+label.modifica_contratto=Modifica Contratto
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_eventi=Inserimento/rimozione di eventi
 label.modifica_evento=Modifica evento
