Creazione pdf degli eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -490,6 +490,7 @@ label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
 label.esito_ricerca=(Esito Ricerca)
 label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
+label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
