Cambiata label per annulla/elimina evento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -371,6 +371,7 @@ label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_provider=Comunicazioni del Provider
 label.conferma=Conferma
+label.conferma_azione=Conferma Azione
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
@@ -518,6 +519,7 @@ label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
+label.evento_proveniente_da_pfa_precedente=Evento proveniente da Piano Formativo Precedente
 label.evento_sponsorizzato_infanzia_radio=L’evento è sponsorizzato da aziende che trattano alimenti per la prima infanzia?
 label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
