--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -254,7 +254,7 @@ label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
 label.accreditamento_nome=Nome
 label.accreditamento_scadenza=Data Scadenza
-label.accreditamento_stato=Stato
+label.accreditamento_stato=Stato Domanda
 label.accreditamento_tipo=Tipologia
 label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
