Bugfix anagrafica Ruolo Eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -289,6 +289,7 @@ label.ambito_list=Ambito
 label.anagrafe_regionale_crediti=Anagrafe Regionale Crediti
 label.anagrafe_regionale_crediti_anno=Anagrafe Regionale Crediti - Anno {0}
 label.anagrafe_regionale_crediti_info={0} {1} {2} - Acquisito {3} Crediti nell''anno {4}
+label.anagrafica_salvata=Anagrafica Salvata
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_evento=Anagrafiche Relative agli Eventi
