--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -127,6 +127,7 @@ engineering.dati_inseriti=File inseriti con successo
 engineering.engineering=Engineering
 engineering.test_firma=Test Firma
 engineering.test_mypay=Test MyPay
+engineering.test_protocollo=Test Protocollo
 error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.anticipazione_data_non_possibile=Non è possibile anticipare la data di inizio di un Evento già accreditato
@@ -425,6 +426,7 @@ label.data_fine_accreditamento=Data Fine Accreditamento
 label.data_inizio=Data inizio
 label.data_invio=Data invio
 label.data_pagamento=Data Pagamento
+label.data_protocollo=Data Protocollo
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_ultima_modifica=Data Ultima Modifica
 label.data_ultima_risposta=Data ultima risposta
@@ -563,6 +565,7 @@ label.help=Help
 label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
+label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
 label.impegno_complessivo_ore=Impegno complessivo in ore
 label.importEventiDaCsvFile=Importa Piano Formativo da CSV
@@ -588,6 +591,7 @@ label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Forma
 label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_partner_evento=Per Partner si intende un ente/organizzazione che apporti un qualsiasi contributo scientifico e/o organizzativo all’attività di formazione realizzata dal Provider senza richiedere uno specifico corrispettivo come ad esempio spazi pubblicitari per la promozione del proprio marchio. \n Nessun soggetto che produca, distribuisca, commercializzi e pubblicizzi prodotti farmaceutici, omeopatici, fitoterapici, dietetici, dispositivi e strumenti medici può assumere il ruolo di Partner di un Provider ECM.I patrocini (es. Regione, Comune, Ordini/Collegi etc.) se accordati NON vanno dichiarati sotto la voce “Partner” e possono essere indicati oltre che nelle locandine dell’evento anche  sull’attestato dei crediti formativi
+label.info_protocollo=Protocollo numero {0} del {1}
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.info_sede_programmaRES=Il campo relativo alla sede di svolgimento dell’evento deve essere modificato solo nel caso in cui la sede sia diversa da quanto indicato nella sezione 1
@@ -786,6 +790,7 @@ label.numero_partecipanti=Numero partecipanti
 label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
 label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
+label.numero_protocollo=Numero Protocollo
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
@@ -1011,6 +1016,7 @@ label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
 label.stato_inserimento=Stato Inserimento
 label.stato_pagamento=Stato pagamento
+label.stato_spedizione=Stato Spedizione
 label.stato_valutazione=Stato Valutazione
 label.status=Status
 label.storico=in storico
