Lista protocolli in uscita in sospeso

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -244,6 +244,7 @@ label.abilita_modifica_campi=Abilita modifica ai campi
 label.abilita_modifica_campi_evento=Abilita modifica ai campi dell''evento {0}
 label.abilitato=Abilitato
 label.accedi=Accedi
+label.accedi_segreteria=Accedi come Segreteria
 label.accredita=Accredita
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
@@ -539,6 +540,7 @@ label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 a
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
 label.fax=FAX
 label.fileDaFirmare=File da firmare
+label.fileId=Id File
 label.file_descrizione=Descrizione
 label.file_nome=File
 label.filtri=Filtra:
@@ -762,6 +764,7 @@ label.nessuna_valutazione_commissione=Nessuna domanda inserita
 label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
+label.nomeFile=Nome File
 label.nome_partner=Nome del partner
 label.nome_sponsor=Nome dello sponsor
 label.nome_utente=Nome Utente
@@ -867,6 +870,7 @@ label.profilo=Profilo
 label.programma=Programma
 label.programma_attività_formativa=Programma attività formativa
 label.programma_del=Programma del
+label.protocolli_sospesi=Protocolli in sospeso
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
 label.provider_accreditamento=Provider:
