modifiche valutazione (storicizzazione) e verbale flusso standard

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -112,6 +112,14 @@ IdFieldEnum.SEDE__IS_LEGALE=Modifica Tipologia Sede
 IdFieldEnum.SEDE__IS_OPERATIVA=Modifica Tipologia Sede
 IdFieldEnum.SEDE__PROVINCIA=Modifica Provincia Sede
 IdFieldEnum.SEDE__TELEFONO=Modifica Telefono Sede
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__IDONEITA_SEDE=Idoneità della Sede
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__PERCEZIONE_INTERESSE_COMMERICALE_SANITA=Percezione evento interesse commerciale Sanità
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__PIANO_FORMATIVO=Piano Formativo
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__PRESENZA_PARTECIPANTI=Presenza dei partecipanti
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__RECLUTAMENTO_DIRETTO=Reclutamento diretto
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__RELAZIONE_ANNUALE=Relazione annuale
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__SCHEDA_QUALITA_PERCEPITA=Scheda Qualità Percepita
+IdFieldEnum.VALUTAZIONE_SUL_CAMPO__VERIFICA_APPRENDIMENTO=Verifica apprendimento
 NotEmpty=campo obbligatorio
 NotNull=campo obbligatorio
 app.title=ECM - Regione Veneto
@@ -159,6 +167,7 @@ error.data_intermedia_annullata=Non è possibile annullare la data intermedia
 error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
 error.data_intermedia_ripetuta=Data intermedia ripetuta
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
+error.data_non_valida_verbale=Data non valida! La data non può essere antecedente ad oggi
 error.date_non_separabili=Data di inizio e data di fine evento devono coincidere
 error.date_non_unificabili=Data di inizio e data di fine evento non possono coincidere
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
@@ -334,6 +343,8 @@ label.caninsert_piano_formativo=Inserimento Piano Formativo
 label.cap=CAP
 label.caratteri_rimanenti=caratteri rimanenti
 label.carica=Carica
+label.cartaIdentita=Carta d'identità
+label.carta_identita=Carta di Identità
 label.causale=Causale
 label.cellulare=Cellulare
 label.cerca=Cerca
@@ -359,9 +370,12 @@ label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
 label.commissione=Commissione ECM
+label.compilazione_verbale_valutazione_loco=Compilazione Verbale della Valutazione in Loco
 label.completa=Completa
 label.componente_comitato=Componente
+label.componente_crec_team_leader=Componente CRECM - Team Leader
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
+label.componenti_segreteria=Componenti della Segreteria
 label.componi=Componi
 label.composizione_comunicazione=Nuova Comunicazione
 label.comune=Comune
@@ -428,6 +442,7 @@ label.data_pagamento=Data Pagamento
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_ultima_modifica=Data Ultima Modifica
 label.data_ultima_risposta=Data ultima risposta
+label.data_verifica_loco=Data della verifica in loco
 label.date=Date
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
@@ -451,6 +466,7 @@ label.decreto_accreditamento=Decreto Accreditamento
 label.decreto_diniego=Decreto Diniego
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
+label.delegaValutazioneSulCampo=Delega
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
@@ -501,6 +517,7 @@ label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
+label.esito_della_valutazione_sul_campo=Esito della Valutazione sul Campo
 label.esito_ricerca=(Esito Ricerca)
 label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
@@ -564,6 +581,7 @@ label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.id_provider=Id del Provider
+label.idoneita_sede=Idoneità della Sede
 label.impegno_complessivo_ore=Impegno complessivo in ore
 label.importEventiDaCsvFile=Importa Piano Formativo da CSV
 label.importo=Importo
@@ -759,6 +777,7 @@ label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
 label.nome_partner=Nome del partner
+label.nome_provider=Nome del Provider
 label.nome_sponsor=Nome dello sponsor
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
@@ -822,7 +841,10 @@ label.ore_corso=Ore corso
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.osservatore_ecm=Osservatore ECM
+label.osservatore_regionale=Osservatore Regionale
 label.osservatori=Osservatori ECM
+label.osservazioni_del_provider=Osservazioni del Provider
+label.osservazioni_team_valutazione=Osservazioni del Team di Valutazione
 label.pagInCorso=Pagamento in corso
 label.paga=Paga
 label.pagamenti_annuali=Pagamenti Annuali
@@ -833,6 +855,7 @@ label.password=Password
 label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
 label.pec=PEC
+label.percezione_interesse_commerciale_sanita=Percezione Evento Interesse Commerciale Sanità
 label.permessi=Permessi
 label.persone=Persone
 label.pfa_provider=Piano Formativo del Provider
@@ -847,6 +870,9 @@ label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carico
 label.presa_in_carico_da=Presa in carico da
 label.presa_visione=Presa visione
+label.presente_alla_visita_verifica=(presente alla visita di verifica)
+label.presente_legale_rappresentante_sottoscrizione_verbale=\u00C8 presente il Legale Rappresentante per la sottoscrizione del verbale?
+label.presenza_partecipanti=Presenza dei Partecipanti
 label.prezzo=Prezzo
 label.privata=Privata
 label.procedura_formativa=Tipologia evento
@@ -886,9 +912,11 @@ label.rapporto_obiettivi_regionali=Percentuale eventi con Obiettivi Regionali
 label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
+label.reclutamento_diretto=Reclutamento Diretto
 label.recupera_password=Recupera password
 label.referee=Referee
 label.referee_ecm=Referee ECM
+label.referente_informatico=Referente Informatico
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
@@ -964,6 +992,7 @@ label.scelta_evento_riedizione=Scelta Evento da rieditare
 label.scelta_modalita=Scelta della modalità di inserimento
 label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
 label.scheda_provider=Scheda provider
+label.scheda_qualita_percepita=Scheda Qualità Percepita
 label.sede=Sede
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
@@ -1076,12 +1105,18 @@ label.valutazione=Valutazione
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
 label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
+label.valutazione_sul_campo=Valutazione sul Campo
 label.valutazioni=Valutazioni
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
+label.valutazioni_effettuate_sul_campo=Valutazioni di verifica effettuate sul campo
 label.valutazioni_precedenti=Valutazioni precedenti
+label.valutazioni_verifica_sul_campo=Valutazioni verifica sul campo
 label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
+label.verbale=Verbale
+label.verbale_valutazione_sul_campo=Verbale Valutazione sul Campo
+label.verifica_apprendimento=Verifica Apprendimento
 label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
 label.verifica_distanza_ricadute_formative=Verifica a distanza di tempo delle ricadute formative
 label.verifica_presenza_partecipanti=Verifica presenza partecipanti
