multidocenza RES -- ATTENZIONE: modifiche alle entity con liquibase:
verranno persi tutti i riferimenti ai docenti dei dettagliattivitaRES

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -493,6 +493,7 @@ label.discipline=Discipline
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
 label.docente=Docente
 label.docente_tutor=Docente / Tutor
+label.docenti=Docenti
 label.docenti_relatori_tutor=Docente / Relatore / Tutor
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
