--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -739,6 +739,8 @@ label.modifica_sede_operativa=Modifica Sede Operativa
 label.modifica_sedi=Inserimento/rimozione di sedi
 label.modifica_seduta=Modifica della Seduta del {0}
 label.modifica_utente=Modifica Utente
+label.modifica_verbale=Modifica Verbale
+label.modifica_verbale_valutazione_sul_campo=Modifica del Verbale della Valutazione sul Campo
 label.mostra=Mostra
 label.mostra_invii_precedenti=Mostra invii precedenti
 label.mostra_riepilogo=Mostra riepilogo domanda
@@ -1206,8 +1208,9 @@ message.valutazione_commissione_salvata=Valutazione della Commissione e Stato de
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata ai Referee CRECM con successo.
+message.verbale_salvato=Verbale aggiornato con successo!
 message.warning=Attenzione
-message.xml_evento_validation_ok=Report importato con successo
+message.xml_evento_validation_ok=Report importato con successo!
 month.agosto=Agosto
 month.aprile=Aprile
 month.dicembre=Dicembre
