--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -545,7 +545,7 @@ label.evento_proveniente_da_pfa_precedente=Evento proveniente da Piano Formativo
 label.evento_sponsorizzato_infanzia_radio=L’evento è sponsorizzato da aziende che trattano alimenti per la prima infanzia?
 label.evento_sponsorizzato_radio=L’evento è sponsorizzato?
 label.evento_titolo=Evento {0}
-label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Segreteria ECM e al CO.Ge.A.P.S. e generazione attestato di partecipazione
+label.evento_to_cogeaps_title=Trasmissione XML partecipanti alla Regione Veneto e al CO.Ge.A.P.S.
 label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
@@ -583,7 +583,7 @@ label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
 label.help=Help
 label.home=Torna alla Home
-label.homepage=Homepage ECM - Regione Veneto
+label.homepage=ECM - Regione Veneto
 label.id=Id
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
@@ -810,7 +810,7 @@ label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
-label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti che hanno acquisito crediti
+label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti/relatori che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
 label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
 label.numero_protocollo=Numero Protocollo
