Aggiunto riepilogo valutazioneSulCampo + WIP storicizzazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -511,6 +511,7 @@ label.dotazione_hardware_software=Dotazione hardware e software necessaria all'u
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.edizione=Edizione
+label.effettuate_sul_campo=effettuate sul Campo
 label.elabora=Elabora
 label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
@@ -746,6 +747,7 @@ label.mostra_invii_precedenti=Mostra invii precedenti
 label.mostra_riepilogo=Mostra riepilogo domanda
 label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
+label.mostra_storico_valutazioni=Mostra storico valutazioni
 label.mostra_valutazione=Mostra valutazione
 label.mostra_valutazioni_complessive=Mostra valutazioni complessive
 label.n_verbale=Verbale numero
@@ -1124,6 +1126,7 @@ label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_effettuate_sul_campo=Valutazioni di verifica effettuate sul campo
 label.valutazioni_precedenti=Valutazioni precedenti
+label.valutazioni_sul_campo=Valutazioni sul Campo
 label.valutazioni_verifica_sul_campo=Valutazioni verifica sul campo
 label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
@@ -1223,3 +1226,6 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.stato_accreditamento_valutazione=Stato della domanda al momento della valutazione
+label.data_valutazione=Data valutazione
+label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
