--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1229,3 +1229,4 @@ month.settembre=Settembre
 label.stato_accreditamento_valutazione=Stato della domanda al momento della valutazione
 label.data_valutazione=Data valutazione
 label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
+label.riepilogo_valutazione=Riepilogo Valutazione
