sistemate comunicazioni come da richieste

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1231,3 +1231,5 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
+label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
