Alert Email - Da testare

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -443,8 +443,10 @@ label.data_invio=Data invio
 label.data_pagamento=Data Pagamento
 label.data_protocollo=Data Protocollo
 label.data_scadenza_pagamento=Data scadenza pagamento
+label.data_scadenza_rendiconto=Data Scadenza Rendiconto
 label.data_ultima_modifica=Data Ultima Modifica
 label.data_ultima_risposta=Data ultima risposta
+label.data_valutazione=Data valutazione
 label.data_verifica_loco=Data della verifica in loco
 label.date=Date
 label.date_intermedie=Date intermedie
@@ -983,6 +985,7 @@ label.riepilogo_evento=Riepilogo dell''Evento {0}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
+label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
 label.rispondi=Rispondi
@@ -1049,6 +1052,7 @@ label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_accreditamento=Stato Accreditamento
+label.stato_accreditamento_valutazione=Stato della domanda al momento della valutazione
 label.stato_cv=Stato CV
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
@@ -1226,6 +1230,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.stato_accreditamento_valutazione=Stato della domanda al momento della valutazione
-label.data_valutazione=Data valutazione
-label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
