--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -389,6 +389,7 @@ label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_provider=Comunicazioni del Provider
 label.conferma=Conferma
 label.conferma_azione=Conferma Azione
+label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
@@ -512,6 +513,7 @@ label.dotazione_hardware_software=Dotazione hardware e software necessaria all'u
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.edizione=Edizione
+label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
 label.effettuate_sul_campo=effettuate sul Campo
 label.elabora=Elabora
 label.elimina=Elimina
@@ -632,6 +634,7 @@ label.inserimento_relazione_annuale=Inserimento Relazione Annuale {0}
 label.inserimento_rendicontazione=Inserimento Rendicontazione
 label.inserimento_sede=Inserimento Sede
 label.inserimento_seduta=Inserimento nuova Seduta
+label.inserimento_sottoscrivente_verbale=Inserimento del Sottoscrivente del Verbale della Valutazione sul Campo
 label.inserimento_valutazione=Inserimento della Valutazione della Domanda
 label.inserimento_valutazione_commissione_in_ODG=Inserisci una Domanda di Accreditamento da valutare nell'Ordine del Giorno
 label.inserire_almeno_sede_legale=Inserire almeno la Sede Legale
@@ -1047,6 +1050,8 @@ label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.sostituto=Sostituto
+label.sottoscrivente=Sottoscrivente
+label.sottoscrivente_verbale=Sottoscrivente della Valutazione sul Campo
 label.sponsorFile=Contratto Sponsor
 label.sponsors=Sponsors
 label.sposta=Sposta
@@ -1136,6 +1141,7 @@ label.valutazioni_verifica_sul_campo=Valutazioni verifica sul campo
 label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
 label.verbale=Verbale
+label.verbalePdfFirmato=PDF del Verbale della Valutazione sul Campo firmato
 label.verbale_valutazione_sul_campo=Verbale Valutazione sul Campo
 label.verifica_apprendimento=Verifica Apprendimento
 label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
@@ -1231,5 +1237,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
-label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
