vaschetta eventi in bozza + nullpointerex gestito

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -390,6 +390,7 @@ label.comunicazioni_provider=Comunicazioni del Provider
 label.conferma=Conferma
 label.conferma_azione=Conferma Azione
 label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
+label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
@@ -515,6 +516,7 @@ label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.edizione=Edizione
 label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
+label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
 label.effettuate_sul_campo=effettuate sul Campo
 label.elabora=Elabora
 label.elimina=Elimina
@@ -535,6 +537,7 @@ label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
 label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano Formativo
+label.eventi_in_bozza=In bozza
 label.eventi_inseriti_pfa_anno=Eventi previsti nel Piano Formativo
 label.eventi_manuali_defintivi_anno=Eventi rendicontati non corrispondenti al Piano Formativo (escluso riedizioni)
 label.eventi_piano_formativo=Eventi del piano formativo
@@ -545,6 +548,7 @@ label.evento=Evento
 label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
+label.evento_non_modificabile_gia_attuato=Evento non modificabile poichè già attuato
 label.evento_professioni=Evento per professioni
 label.evento_proveniente_da_pfa_precedente=Evento proveniente da Piano Formativo Precedente
 label.evento_sponsorizzato_infanzia_radio=L’evento è sponsorizzato da aziende che trattano alimenti per la prima infanzia?
@@ -1238,5 +1242,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
-label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
