--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -163,7 +163,8 @@ error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
-error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) / 10 giorni (Riedizione) dalla data del suo inizio.
+error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
+error.data_inizio_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
 error.data_intermedia_annullata=Non è possibile annullare la data intermedia
 error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
 error.data_intermedia_ripetuta=Data intermedia ripetuta
