--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -163,8 +163,9 @@ error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
+error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
-error.data_inizio_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
+error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
 error.data_intermedia_annullata=Non è possibile annullare la data intermedia
 error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
 error.data_intermedia_ripetuta=Data intermedia ripetuta
@@ -516,6 +517,7 @@ label.dotazione_hardware_software=Dotazione hardware e software necessaria all'u
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.edizione=Edizione
+label.edizione_short=Ed.
 label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
 label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
 label.effettuate_sul_campo=effettuate sul Campo
@@ -827,6 +829,7 @@ label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
 label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti/relatori che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
+label.numero_partecipanti_short=Num. Part.
 label.numero_professioni_acquisito_crediti=Numero professioni che hanno acquisito crediti
 label.numero_protocollo=Numero Protocollo
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
@@ -1083,6 +1086,7 @@ label.telefono=Telefono
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
+label.tipo=Tipo
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_accreditamento=Tipo Accreditamento
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
@@ -1243,7 +1247,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.tipo=Tipo
-label.edizione_short=Ed.
-label.numero_partecipanti_short=Num. Part.
-label.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
