--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -261,6 +261,7 @@ label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
 label.accreditamenti_lista_gruppo=Lista Domande di accreditamento {0}
 label.accreditamento=Accreditamento
+label.accreditamento_data_inizio=Valido dal
 label.accreditamento_evento_piano_formativo=Accreditamento Evento {0} dal Piano Formativo
 label.accreditamento_fine=Valido fino al
 label.accreditamento_invio=Data invio
@@ -1216,6 +1217,7 @@ message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
 message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
+message.presa_visione_success=Presa Visione eseguita correttamente.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
