WIP divisione dati accreditamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1096,6 +1096,7 @@ label.tipo_provider=Tipo:
 label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
+label.tipologia_formativa=Tipologia Formativa
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Obiettivi formativi
 label.tipologia_sede=Tipologia Sede
@@ -1249,3 +1250,9 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.edit_tipologiaFormativa=Modifica della Tipologia Formativa
+label.edit_datiEconomici=Modifica dei Dati Economici
+label.edit_datiStruttura=Modifica dei Dati della Struttura
+label.new_tipologiaFormativa=Inserimento della Tipologia Formativa
+label.new_datiEconomici=Inserimento dei Dati Economici
+label.new_datiStruttura=Inserimento dei Dati della Struttura
