--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -517,6 +517,9 @@ label.domande_standard=Domande Standard
 label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
+label.edit_datiEconomici=Modifica dei Dati Economici
+label.edit_datiStruttura=Modifica dei Dati della Struttura
+label.edit_tipologiaFormativa=Modifica della Tipologia Formativa
 label.edizione=Edizione
 label.edizione_short=Ed.
 label.effetti_chiusura_comunicazione=Dopo la chiusura non sarà più possibile inserire nuove risposte alla Comunicazione
@@ -798,6 +801,9 @@ label.nessuna_sede=Nessuna sede inserita
 label.nessuna_seduta=Non sono state trovate Sedute nel database!
 label.nessuna_seduta_selezionabile=Nessuna Seduta selezionabile
 label.nessuna_valutazione_commissione=Nessuna domanda inserita
+label.new_datiEconomici=Inserimento dei Dati Economici
+label.new_datiStruttura=Inserimento dei Dati della Struttura
+label.new_tipologiaFormativa=Inserimento della Tipologia Formativa
 label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
@@ -1096,6 +1102,7 @@ label.tipo_provider=Tipo:
 label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
+label.tipologia_formativa=Tipologia Formativa
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Obiettivi formativi
 label.tipologia_sede=Tipologia Sede
